@@ -98,11 +98,6 @@ CODESTARTfreeInstance
 ENDfreeInstance
 
 
-BEGINneedUDPSocket
-CODESTARTneedUDPSocket
-ENDneedUDPSocket
-
-
 BEGINdbgPrintInstInfo
 	register int i;
 CODESTARTdbgPrintInstInfo
