@@ -288,12 +288,6 @@ CODE_STD_FINALIZERparseSelectorAct
 ENDparseSelectorAct
 
 
-BEGINneedUDPSocket
-CODESTARTneedUDPSocket
-	iRet = RS_RET_TRUE;
-ENDneedUDPSocket
-
-
 BEGINmodExit
 CODESTARTmodExit
 	relpEngineDestruct(&pRelpEngine);
